--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,7 +17,7 @@ div{
   grid-column-end: 2;
   grid-row-start: 2;
   grid-row-end: 8;
-  padding-top: 40px;
+  padding-top: 10vh;
 }
 .main{
   grid-column-start: 2;
