--- a/src/app/pages/empresa/description/description.component.css
+++ b/src/app/pages/empresa/description/description.component.css
@@ -1,5 +1,4 @@
 .frame{
-  background-color: #D9D9D9;
   width: 75vw;
   height: 90vh;
   display: grid;
@@ -7,7 +6,7 @@
   grid-template-rows: repeat(12, 1fr);
   align-items: center;
   border-radius: 30px;
-  transform: translateY(8%);
+  transform: translateY(5%);
 }
 .nome{
   grid-column-start: 1;
@@ -57,18 +56,15 @@ img{
   height: 25vh;
   margin: 0 -20px 0 40px;
   border-radius: 15px;
-  font-family: 'Josefin Slab';
-  text-align: justify;
-  font-size: 18px;
-  padding: 20px;
+  padding: 10px;
 }
 .nome2{
-  font-family: 'Josefin Slab';
+  font-family: 'Playpen Sans';
   text-align: left;
   font-size: 25px;
 }
 .description2{
-  font-family: 'Josefin Slab2';
+  font-family: 'Playpen Sans';
   text-align: justify;
   font-size: 16px;
 }
