--- a/src/app/pages/viabilidade/viabil-screen/forms/forms.component.html
+++ b/src/app/pages/viabilidade/viabil-screen/forms/forms.component.html
@@ -1,2 +1,2 @@
-<label for="">{{label}}</label><br>
-<input type="{{tipo}}">
+<label for="{{label}}">{{label}}</label><br>
+<input type="{{tipo}}" id="{{label}}">
