--- a/src/app/pages/viabilidade/viabil-screen/viabil-screen.component.html
+++ b/src/app/pages/viabilidade/viabil-screen/viabil-screen.component.html
@@ -4,14 +4,14 @@
     <app-forms label="{{apelido}}" tipo="text" class="apelido"></app-forms><br>
     <app-forms label="{{endereco}}" tipo="text" class="endereco"></app-forms><br>
     <app-forms label="{{etapa}}" tipo="text" class="etapa"></app-forms><br>
-    <label for="" class="produto"><strong><u>PRODUTO - TIPOLOGIA</u></strong></label>
+    <label class="produto"><strong><u>PRODUTO - TIPOLOGIA</u></strong></label>
     <app-forms label="{{areaConstruida}}" tipo="number" class="areaConstruida"></app-forms><br>
     <app-forms label="{{qtddAndares}}" tipo="number" class="qtddAndares"></app-forms><br>
     <app-forms label="{{qtddVagasUH}}" tipo="number" class="qtddVagasUH"></app-forms><br>
     <app-forms label="{{qtddUHAndar}}" tipo="number" class="qtddUHAndar"></app-forms><br>
 
     <div class="mapa"><img src="assets/images/mapa.png" alt=""></div>
-    <label for="" class="label-left"><strong><u>DADOS DA LEGISLAÇÃO</u></strong></label>
+    <label class="label-left"><strong><u>DADOS DA LEGISLAÇÃO</u></strong></label>
     <app-forms label="{{coefAproveitamento}}" tipo="number" class="coefAproveitamento"></app-forms><br>
     <app-forms label="{{taxaOcupacao}}" tipo="number" class="taxaOcupacao"></app-forms><br>
     <app-forms label="{{indiceElevacao}}" tipo="number" class="indiceElevacao"></app-forms><br>
