--- a/src/app/shared/top-bar/top-bar.component.css
+++ b/src/app/shared/top-bar/top-bar.component.css
@@ -41,39 +41,58 @@
   margin-top: 3vh;
   margin-left: 60vw;
 }
-@media (min-width: 100px) and (max-width:750px){
+@media (min-width: 250px) and (max-width:750px){
   .frame-background{
     background-color: #629454;
     width: 100vw;
     height: 100px;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    grid-column-start: 2;
-    grid-column-end: 10;
-    margin-top: -10px;
   }
   .logomarca{
-    background-color: #E4F0E1;
-    height: 140px;
-    padding: 30px;
-    margin-top: -25px;
-    margin-left: -15px;
+    background-color : #E4F0E1;
+    height: 15vh;
+    transform: translate(25vw, -5%);
   }
   .login{
     display: none;
   }
   .person{
     display: block;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(30%) translateX(50vw);
     background-color: transparent;
     border: none;
-    color: rgb(32, 32, 32);
-    font-size: 50px;
-    height: 50px;
-    width: 50px;
-    left: 10vw;
-
+    color: rgb(238, 238, 238);
+    font-size: 15vw;
+    height: 15vh;
+    width: 15vw;
+  }
+}
+@media (min-width: 750px) and (max-width:1050px){
+  .frame-background{
+    background-color: #629454;
+    width: 100vw;
+    height: 100px;
+  }
+  .logomarca{
+    background-color : #E4F0E1;
+    height: 12vh;
+    transform: translate(10vw, -5%);
+  }
+  .person{
+    display: none;
+  }
+  .login{
+    font-size: 14px;
+    border-radius: 10px;
+    font-family: 'Josefin Slab';
+    border: none;
+    background-color: #727971;
+    color: #F0ECEC;
+    letter-spacing: 10px;
+    height: 40px;
+    width: 180px;
+    opacity: 80%;
+    display: block;
+    margin-top: 3vh;
+    margin-left: 55vw;
   }
 }
