--- a/src/app/pages/empresa/description/description.component.css
+++ b/src/app/pages/empresa/description/description.component.css
@@ -68,3 +68,169 @@ img{
   text-align: justify;
   font-size: 16px;
 }
+
+@media (min-width: 100px) and (max-width: 420px) {
+  .frame{
+    width: 100vw;
+    height: 100vh;
+    display: flexbox;
+    align-items: center;
+    border-radius: 30px;
+    transform: translateY(5%);
+  }
+  .nome{
+    font-family: 'Josefin Slab2';
+    text-align: center;
+    font-size: 24px;
+    margin-left: -14vw;
+    margin-top: 10vh;
+  }
+  .description1{
+    font-family: 'Josefin Slab';
+    text-align: justify;
+    background-color: white;
+    padding: 10px;
+    border-radius: 15px;
+    font-size: 18px;
+    width: 80vw;
+    margin-left: -20vw;
+    margin-top: 28vh;
+  }
+  .img{
+    display: none;
+  }
+  .equipe{
+    background-color: white;
+    width: 80vw;
+    height: 25vh;
+    margin: 28vh -2vw 0 -20vw;
+    border-radius: 15px;
+    padding: 10px;
+  }
+  .nome2{
+    font-family: 'Playpen Sans';
+    text-align: left;
+    font-size: 25px;
+  }
+  .description2{
+    font-family: 'Playpen Sans';
+    text-align: justify;
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 420px) and (max-width: 750px) {
+  .frame{
+    width: 100vw;
+    height: 100vh;
+    display: flexbox;
+    align-items: center;
+    border-radius: 30px;
+    transform: translateY(5%);
+  }
+  .nome{
+    font-family: 'Josefin Slab2';
+    text-align: center;
+    font-size: 30px;
+    margin-left: -14vw;
+    margin-top: 10vh;
+  }
+  .description1{
+    font-family: 'Josefin Slab';
+    text-align: justify;
+    background-color: white;
+    padding: 10px;
+    border-radius: 15px;
+    font-size: 20px;
+    width: 90vw;
+    margin-left: -20vw;
+    margin-top: 18vh;
+  }
+  .img{
+    position: absolute;
+    width: 80vw;
+    height: 40vh;
+    margin-left: -90vw;
+    margin-top: 120vh;
+  }
+  img{
+    width: 100%;
+    height: 100%;
+  }
+  .equipe{
+    background-color: white;
+    height: 25vh;
+    width: 90vw;
+    margin-left: -20vw;
+    margin-top: 62vh;
+    border-radius: 15px;
+    padding: 10px;
+  }
+  .nome2{
+    font-family: 'Playpen Sans';
+    text-align: left;
+    font-size: 25px;
+  }
+  .description2{
+    font-family: 'Playpen Sans';
+    text-align: justify;
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 750px) and (max-width: 1050px) {
+  .frame{
+    width: 100vw;
+    height: 100vh;
+    display: flexbox;
+    border-radius: 30px;
+  }
+  .nome{
+    font-family: 'Josefin Slab2';
+    text-align: center;
+    font-size: 30px;
+    margin-left: -15vh;
+    margin-top: 5vh;
+  }
+  .description1{
+    font-family: 'Josefin Slab';
+    text-align: justify;
+    background-color: white;
+    padding: 10px;
+    border-radius: 15px;
+    font-size: 18px;
+    width: 35vw;
+    margin-left: -10vw;
+    margin-top: 10vh;
+  }
+  .img{
+    margin-left: -200px;
+    margin-top: 12vh;
+    width: 30vw;
+    height: 25vh;
+  }
+  img{
+    width: 100%;
+    height: 100%;
+  }
+  .equipe{
+    background-color: white;
+    width: 68vw;
+    height: 25vh;
+    border-radius: 15px;
+    padding: 10px;
+    margin-left: -10vw;
+    margin-top: -10vh;
+  }
+  .nome2{
+    font-family: 'Playpen Sans';
+    text-align: left;
+    font-size: 25px;
+  }
+  .description2{
+    font-family: 'Playpen Sans';
+    text-align: justify;
+    font-size: 16px;
+  }
+
+}
