--- a/src/app/pages/viabilidade/viabil-screen/forms/forms.component.css
+++ b/src/app/pages/viabilidade/viabil-screen/forms/forms.component.css
@@ -16,3 +16,15 @@ input{
   color: #434543;
   background-color: #f9faf9;
 }
+
+@media (min-width: 400px) and (max-width: 750px) {
+  input{
+    width: 70vw;
+  }
+}
+@media (min-width: 750px) and (max-width: 900px) {
+  input{
+    width: 50vw;
+  }
+}
+
