--- a/src/styles.css
+++ b/src/styles.css
@@ -44,5 +44,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    display: flexbox;
   }
 }
