Ajustes no projeto solicitados.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <router-outlet>
 
-<div>
-  
   <app-top-bar class="navbar"></app-top-bar>
+<div>
   <app-side-bar class="sidebar"></app-side-bar>
-
-  <app-slides class="main"></app-slides>
-  <app-description class="main"></app-description>
-  <app-login-screen class="main"></app-login-screen>
-  <app-viabil-screen class="main"></app-viabil-screen>
-  <app-cards-servicos class="main"></app-cards-servicos>
+  <div class="main">
+    <app-slides></app-slides>
+    <app-description></app-description>
+    <app-login-screen></app-login-screen>
+    <app-viabil-screen></app-viabil-screen>
+    <app-cards-servicos></app-cards-servicos>
+  </div>
 
 </div>
 
