--- a/src/app/pages/servicos/cards-servicos/cards-servicos.component.html
+++ b/src/app/pages/servicos/cards-servicos/cards-servicos.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="display">
+<div *ngIf="display" class="servicos">
   <div class="frame">
     <app-cards label="{{cadastrarTerreno}}"
               type="{{adicionar}}"
