--- a/src/app/pages/viabilidade/viabil-screen/viabil-screen.component.html
+++ b/src/app/pages/viabilidade/viabil-screen/viabil-screen.component.html
@@ -4,18 +4,20 @@
     <app-forms label="{{apelido}}" tipo="text" class="apelido"></app-forms><br>
     <app-forms label="{{endereco}}" tipo="text" class="endereco"></app-forms><br>
     <app-forms label="{{etapa}}" tipo="text" class="etapa"></app-forms><br>
-    <label class="produto"><strong><u>PRODUTO - TIPOLOGIA</u></strong></label>
+    <label class="produto"><strong><u>PRODUTO - TIPOLOGIA</u></strong></label><br>
     <app-forms label="{{areaConstruida}}" tipo="number" class="areaConstruida"></app-forms><br>
     <app-forms label="{{qtddAndares}}" tipo="number" class="qtddAndares"></app-forms><br>
     <app-forms label="{{qtddVagasUH}}" tipo="number" class="qtddVagasUH"></app-forms><br>
     <app-forms label="{{qtddUHAndar}}" tipo="number" class="qtddUHAndar"></app-forms><br>
 
-    <div class="mapa"><img src="assets/images/mapa.png" alt=""></div>
-    <label class="label-left"><strong><u>DADOS DA LEGISLAÇÃO</u></strong></label>
+    <div class="mapa"><img src="assets/images/mapa.png" alt=""></div> <br>
+    <label class="label-left"><strong><u>DADOS DA LEGISLAÇÃO</u></strong></label><br>
     <app-forms label="{{coefAproveitamento}}" tipo="number" class="coefAproveitamento"></app-forms><br>
     <app-forms label="{{taxaOcupacao}}" tipo="number" class="taxaOcupacao"></app-forms><br>
     <app-forms label="{{indiceElevacao}}" tipo="number" class="indiceElevacao"></app-forms><br>
+    <section>
     <input type="reset" value="Limpar Campos" class="button-limpar">
     <input type="submit" value="Salvar" class="button-salvar">
+    </section>
   </form>
 </div>
