--- a/src/app/shared/side-bar/side-bar.component.html
+++ b/src/app/shared/side-bar/side-bar.component.html
@@ -1,14 +1,15 @@
-<div id="sidebar" class="sidebar">
-  <app-cards label="{{buttonHome}}" (click)="navigateTo('home')"></app-cards>
-  <app-cards label="{{buttonEmpresa}}" (click)="navigateTo('empresa')"></app-cards>
-  <app-cards label="{{buttonViabilidade}}" (click)="navigateTo('viabilidade')"></app-cards>
-  <app-cards label="{{buttonServicos}}" (click)="navigateTo('servicos')"></app-cards>
-  <app-cards label="{{buttonAtuacao}}" (click)="navigateTo('portfolio')"></app-cards>
-  <app-cards label="{{buttonNovidades}}" (click)="navigateTo('home')"></app-cards>
-  <app-cards label="{{buttonContatos}}" (click)="navigateTo('home')"></app-cards>
-</div>
-<div class="toggle-icon" [class.moved]="isIconMoved" (click)="toggleSideBar()">
-  <mat-icon>menu</mat-icon>
-</div>
-
+<section>
+  <div id="sidebar" class="sidebar">
+    <app-cards label="{{buttonHome}}" (click)="navigateTo('home')"></app-cards>
+    <app-cards label="{{buttonEmpresa}}" (click)="navigateTo('empresa')"></app-cards>
+    <app-cards label="{{buttonViabilidade}}" (click)="navigateTo('viabilidade')"></app-cards>
+    <app-cards label="{{buttonServicos}}" (click)="navigateTo('servicos')"></app-cards>
+    <app-cards label="{{buttonAtuacao}}" (click)="navigateTo('portfolio')"></app-cards>
+    <app-cards label="{{buttonNovidades}}" (click)="navigateTo('home')"></app-cards>
+    <app-cards label="{{buttonContatos}}" (click)="navigateTo('home')"></app-cards>
+  </div>
+  <div class="toggle-icon" [class.moved]="isIconMoved" (click)="toggleSideBar()">
+    <mat-icon>menu</mat-icon>
+  </div>
+</section>
 
