--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,35 +1,50 @@
 div{
-  width: 100vw;
-  height: 100vh;
-  display: grid;
-  grid-template-columns: repeat(11, 1fr);
-  grid-template-rows: repeat(8, 1fr);
-  align-items: center;
-}
-.navbar{
-  grid-column-start: 1;
-  grid-column-end: 12;
-  grid-row-start: 1;
-  grid-row-end: 2;
+  display: flex;
+  flex-direction: row;
 }
 .sidebar{
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 2;
-  grid-row-end: 8;
-  padding-top: 10vh;
+  width: 25%;
+  height: 80vh;
+  padding: 2vh;
+  justify-content: space-evenly;
 }
 .main{
-  grid-column-start: 2;
-  grid-column-end: 11;
-  grid-row-start: 2;
-  grid-row-end: 8;
-  margin-left: 12vh;
+  width: 100%;
+  height: 80vh;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 @media (min-width: 250px) and (max-width: 750px) {
   div{
-    width: 100vw;
-    height: 100vh;
+    display: flex;
+    flex-direction: row;
+  }
+  .sidebar{
+    width: 35%;
+    height: 90vh;
+  }
+  .main{
+    margin-left: -25%;
+    width: 100%;
+    height: 90vh;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media (min-width: 750px) and (max-width: 900px) {
+  div{
+    display: flex;
+    flex-direction: row;
+  }
+  .sidebar{
+    width: 25%;
+    height: 80vh;
+  }
+  .main{
+    width: 80%;
+    height: 80vh;
+    justify-content: center;
+    align-items: flex-start;
   }
 }
