--- a/src/app/pages/empresa/description/description.component.css
+++ b/src/app/pages/empresa/description/description.component.css
@@ -1,44 +1,24 @@
 .frame{
   width: 75vw;
   height: 90vh;
-  display: grid;
-  grid-template-columns: repeat(11, 1fr);
-  grid-template-rows: repeat(12, 1fr);
-  align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   border-radius: 30px;
-  transform: translateY(5%);
+  padding: 8px;
+  justify-content: center;
 }
 .nome{
-  grid-column-start: 1;
-  grid-column-end: 6;
-  grid-row-start: 1;
-  grid-row-end: 2;
   font-family: 'Josefin Slab2';
-  text-align: center;
   font-size: 30px;
-  margin-left: 30px;
 }
 .description1{
-  grid-column-start: 1;
-  grid-column-end: 6;
-  grid-row-start: 2;
-  grid-row-end: 6;
   font-family: 'Josefin Slab';
   text-align: justify;
-  background-color: white;
-  padding: 10px;
   border-radius: 15px;
   font-size: 18px;
-  margin-left: 40px;
-  margin-top: -25px;
 }
 .img{
-  grid-column-start: 7;
-  grid-column-end: 12;
-  grid-row-start: 1;
-  grid-row-end: 5;
-  margin-left: -30px;
-  margin-top: 20px;
   width: 30vw;
   height: 55vh;
 }
@@ -47,20 +27,15 @@ img{
   height: 100%;
 }
 .equipe{
-  background-color: white;
-  grid-column-start: 1;
-  grid-column-end: 12;
-  grid-row-start: 7;
-  grid-row-end: 12;
   width: 70vw;
   height: 25vh;
-  margin: 0 -20px 0 40px;
   border-radius: 15px;
-  padding: 10px;
+  padding: 8px;
+  align-items: center;
 }
 .nome2{
   font-family: 'Playpen Sans';
-  text-align: left;
+  text-align: center;
   font-size: 25px;
 }
 .description2{
@@ -69,168 +44,23 @@ img{
   font-size: 16px;
 }
 
-@media (min-width: 100px) and (max-width: 420px) {
-  .frame{
-    width: 100vw;
-    height: 100vh;
-    display: flexbox;
-    align-items: center;
-    border-radius: 30px;
-    transform: translateY(5%);
-  }
-  .nome{
-    font-family: 'Josefin Slab2';
-    text-align: center;
-    font-size: 24px;
-    margin-left: -14vw;
-    margin-top: 10vh;
-  }
-  .description1{
-    font-family: 'Josefin Slab';
-    text-align: justify;
-    background-color: white;
-    padding: 10px;
-    border-radius: 15px;
-    font-size: 18px;
-    width: 80vw;
-    margin-left: -20vw;
-    margin-top: 28vh;
-  }
+@media (min-width: 675px) and (max-width: 900px) {
   .img{
-    display: none;
-  }
-  .equipe{
-    background-color: white;
-    width: 80vw;
-    height: 25vh;
-    margin: 28vh -2vw 0 -20vw;
-    border-radius: 15px;
-    padding: 10px;
-  }
-  .nome2{
-    font-family: 'Playpen Sans';
-    text-align: left;
-    font-size: 25px;
-  }
-  .description2{
-    font-family: 'Playpen Sans';
-    text-align: justify;
-    font-size: 16px;
-  }
-}
-
-@media (min-width: 420px) and (max-width: 750px) {
-  .frame{
-    width: 100vw;
-    height: 100vh;
-    display: flexbox;
-    align-items: center;
-    border-radius: 30px;
-    transform: translateY(5%);
-  }
-  .nome{
-    font-family: 'Josefin Slab2';
-    text-align: center;
-    font-size: 30px;
-    margin-left: -14vw;
-    margin-top: 10vh;
-  }
-  .description1{
-    font-family: 'Josefin Slab';
-    text-align: justify;
-    background-color: white;
-    padding: 10px;
-    border-radius: 15px;
-    font-size: 20px;
-    width: 90vw;
-    margin-left: -20vw;
-    margin-top: 18vh;
-  }
-  .img{
-    position: absolute;
-    width: 80vw;
-    height: 40vh;
-    margin-left: -90vw;
-    margin-top: 120vh;
+    width: 60vw;
+    height: 70vh;
   }
   img{
     width: 100%;
     height: 100%;
   }
-  .equipe{
-    background-color: white;
-    height: 25vh;
-    width: 90vw;
-    margin-left: -20vw;
-    margin-top: 62vh;
-    border-radius: 15px;
-    padding: 10px;
-  }
-  .nome2{
-    font-family: 'Playpen Sans';
-    text-align: left;
-    font-size: 25px;
-  }
-  .description2{
-    font-family: 'Playpen Sans';
-    text-align: justify;
-    font-size: 16px;
-  }
 }
-
-@media (min-width: 750px) and (max-width: 1050px) {
-  .frame{
-    width: 100vw;
-    height: 100vh;
-    display: flexbox;
-    border-radius: 30px;
-  }
-  .nome{
-    font-family: 'Josefin Slab2';
-    text-align: center;
-    font-size: 30px;
-    margin-left: -15vh;
-    margin-top: 5vh;
-  }
-  .description1{
-    font-family: 'Josefin Slab';
-    text-align: justify;
-    background-color: white;
-    padding: 10px;
-    border-radius: 15px;
-    font-size: 18px;
-    width: 35vw;
-    margin-left: -10vw;
-    margin-top: 10vh;
-  }
+@media (min-width: 100px) and (max-width: 675px) {
   .img{
-    margin-left: -200px;
-    margin-top: 12vh;
-    width: 30vw;
-    height: 25vh;
+    width: 45vw;
+    height: 30vh;
   }
   img{
     width: 100%;
     height: 100%;
   }
-  .equipe{
-    background-color: white;
-    width: 68vw;
-    height: 25vh;
-    border-radius: 15px;
-    padding: 10px;
-    margin-left: -10vw;
-    margin-top: -10vh;
-  }
-  .nome2{
-    font-family: 'Playpen Sans';
-    text-align: left;
-    font-size: 25px;
-  }
-  .description2{
-    font-family: 'Playpen Sans';
-    text-align: justify;
-    font-size: 16px;
-  }
-
 }
