--- a/src/app/pages/home/slides/slides.component.css
+++ b/src/app/pages/home/slides/slides.component.css
@@ -1,30 +1,20 @@
 img{
   max-width: 100%;
   max-height: 100%;
-  object-fit: contain;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 .carousel {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 450px;
-  width: 100%;
-  background-color: rgba(243, 243, 243, 0.473);
-  transform: translateX(2%) translateY(4%);
+  height: 80vh;
+  width: 75vw;
+  justify-content: space-between;
+  background-color: rgba(196, 196, 196, 0.473);
   border-radius: 20px;
+  align-items: center;
 }
 .nav-button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(50%);
   border: none;
   color: rgb(80, 75, 75);
   background-color: rgb(183, 192, 165);
-  border-radius: 50%;
   font-size: 30px;
 }
 .left {
@@ -35,35 +25,22 @@ img{
 }
 @media (min-width: 100px) and (max-width: 420px) {
   img{
-    max-width: 90%;
+    max-width: 80%;
     max-height: 90%;
-    object-fit: contain;
-    position: absolute;
-    top: 50%;
-    left: 60%;
-    transform: translate(-60%, -50%);
   }
   .carousel {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 450px;
-    width: 120%;
-    background-color: rgba(243, 243, 243, 0.473);
-    transform: translateX(-2vw) translateY(4%);
+    height: 80vh;
+    justify-content: space-between;
+    background-color: rgba(196, 196, 196, 0.473);
     border-radius: 20px;
-    left: -20%;
+    align-items: center;
   }
-  .nav-button{
-    position: absolute;
+  .nav-button {
     border: none;
     color: rgb(80, 75, 75);
     background-color: rgb(183, 192, 165);
-    border-radius: 50%;
     font-size: 30px;
-    top: 50%;
-    margin-left: -3vw;
-    margin-right: -4vw;
   }
   .left {
     left: 0;
@@ -114,35 +91,21 @@ img{
 }
 @media (min-width: 750px) and (max-width: 900px) {
   img{
-    max-width: 80%;
-    max-height: 80%;
-    object-fit: contain;
-    position: absolute;
-    top: 50%;
-    left: 60%;
-    transform: translate(-60%, -50%);
+    max-width: 90%;
+    max-height: 90%;
   }
   .carousel {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 450px;
-    width: 110%;
-    background-color: rgba(243, 243, 243, 0.473);
-    transform: translateX(-2vw) translateY(4%);
+    height: 75vh;
+    justify-content: space-between;
+    background-color: rgba(196, 196, 196, 0.473);
     border-radius: 20px;
-    left: -4%;
+    align-items: center;
   }
   .nav-button{
-    position: absolute;
     border: none;
     color: rgb(80, 75, 75);
     background-color: rgb(183, 192, 165);
-    border-radius: 50%;
-    font-size: 30px;
-    top: 50%;
-    margin-left: 2vw;
-    margin-right: -2vw;
   }
   .left {
     left: 0;
