--- a/src/app/pages/login/login-screen/login-screen.component.css
+++ b/src/app/pages/login/login-screen/login-screen.component.css
@@ -1,30 +1,21 @@
 .frame{
-  background-color: #e9e5e593;
-  width: 78vw;
+  width: 75vw;
   height: 80vh;
-  display: grid;
-  grid-template-columns: repeat(11, 1fr);
-  grid-template-rows: repeat(12, 1fr);
+  display: flex;
+  flex-direction: row;
   align-items: center;
   border-radius: 30px;
+  margin-left: -10vw;
 }
 hr{
   transform: rotate(90deg);
-  grid-row-start: 1;
-  grid-row-end: 12;
   border-top: 3px dashed #174617;
   width: 420px;
-  grid-column: 5;
-
+  margin-left: -8vw;
 }
 .image{
-  grid-column-start: 2;
-  grid-column-end: 6;
-  grid-row-start: 2;
-  grid-row-end: 9;
-  height: 50vh;
-  width: 30vw;
-  margin: -50px -25px 0 25px;
+  width: 40vw;
+  margin-left: 10vh;
 }
 .imagem{
   width: 100%;
@@ -32,44 +23,30 @@ hr{
 }
 h3{
   font-family: 'Kavivanar';
-  text-align: justify;
   font-size: 24px;
-  margin-top: 30px;
-  grid-column-start: 7;
-  grid-column-end: 9;
   text-align: center;
   color: #344432;
 }
 .label{
   font-family: 'Kavivanar';
-  text-align: justify;
   font-size: 20px;
-  margin-top: 10px;
-  grid-column-start: 10;
-  grid-column-end: 11;
   text-align: center;
   color: #8B0B0B;
 }
 .login{
-  grid-column-start: 8;
-  grid-column-end: 12;
-  grid-row-start: 3;
-  grid-row-end: 9;
   height: 65vh;
-  width: 30vw;
-  margin-left: -260px;
+  width: 35vw;
+  margin-left: -8vw;
 }
 .logomarca{
   width: 40%;
-  align-items: center;
-  transform: translateX(75%) translateY(80%);
+  transform: translateX(75%) translateY(75%);
 }
 .form {
   min-width: 100px;
   max-width: 500px;
   width: 100%;
   transform: translateY(80%);
-
 }
 .full-width {
   width: 100%;
@@ -86,7 +63,7 @@ a{
 .cadastro{
   transform: translateX(10%) translateY(700%);
   font-family: 'Josefin Slab2';
-  font-size: 24px;
+  font-size: 2vw;
   color: #171A18;
   letter-spacing: 10px;
 }
@@ -94,10 +71,88 @@ a{
   border: none;
   background-color: #839b8a;
   transform: translateX(300%) translateY(420%);
-  width: 100px;
-  height: 25px;
-  border-radius: 25px;
+  width: 8vw;
+  height: 4vh;
+  border-radius: 5vw;
 }
 .okimg{
   transform: translateY(-30%);
+}
+@media (min-width: 100px) and (max-width: 750px) {
+  .frame{
+    width: 75vw;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 30px;
+    margin-left: -10vw;
+  }
+  hr{
+    display: none;
+  }
+  .image{
+    width: 40vw;
+    margin-left: 10vh;
+  }
+  .imagem{
+    width: 100%;
+    height: 100%;
+  }
+  h3{
+    font-family: 'Kavivanar';
+    font-size: 24px;
+    text-align: center;
+    color: #344432;
+  }
+  .label{
+    font-family: 'Kavivanar';
+    font-size: 20px;
+    text-align: center;
+    color: #8B0B0B;
+  }
+  .login{
+    height: 65vh;
+    width: 35vw;
+    margin-left: -8vw;
+  }
+  .logomarca{
+    width: 60%;
+    transform: translateX(75%) translateY(250%);
+  }
+  .form {
+    width: 150px;
+    width: 100%;
+    transform: translateX(25%) translateY(100%);
+  }
+  .full-width {
+    width: 100%;
+    height: 75%;
+    border-radius: 30%;
+    color: #131713;
+  }
+  input{
+    background-color: #dfe2df;
+  }
+  a{
+   text-decoration: none;
+  }
+  .cadastro{
+    transform: translateX(10%) translateY(900%);
+    font-family: 'Josefin Slab2';
+    font-size: 2vw;
+    color: #171A18;
+    letter-spacing: 10px;
+  }
+  .ok{
+    border: none;
+    background-color: #839b8a;
+    transform: translateX(400%) translateY(600%);
+    width: 8vw;
+    height: 4vh;
+    border-radius: 5vw;
+  }
+  .okimg{
+    transform: translateY(-30%);
+  }
 }
