--- a/src/app/pages/servicos/cards-servicos/cards-servicos.component.css
+++ b/src/app/pages/servicos/cards-servicos/cards-servicos.component.css
@@ -1,22 +1,12 @@
-.left-top{
-  margin-left: 3vw;
-}
-.right-top{
-  margin-left: 60px;
-}
-.left-bottom {
-  margin-left: 3vw;
-}
-.right-bottom {
-  margin-left: 60px;
-}
 .frame{
-  position: absolute;
-  transform: translateY(15%);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 .tabela {
-  width: 100%;
-  transform: translateY(85%);
+  width: 90%;
+  transform: translateY(5%);
   background-color: #303b30;
 }
 td {
@@ -32,4 +22,31 @@ th{
   text-align: center;
   font-family: 'Josefin Slab3';
   font-size: 18px;
+}
+@media (min-width: 100px) and (max-width: 750px) {
+  .frame{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 125vh;
+  }
+  .tabela {
+    width: 90%;
+    background-color: #303b30;
+  }
+  td {
+    background-color: #c9d3c9;
+    text-align: center;
+    font-family: 'Josefin Slab2';
+    font-size: 18px;
+  }
+  tr {
+    background-color: #90a190;
+  }
+  th{
+    text-align: center;
+    font-family: 'Josefin Slab3';
+    font-size: 18px;
+  }
 }
