--- a/src/app/shared/top-bar/top-bar.component.css
+++ b/src/app/shared/top-bar/top-bar.component.css
@@ -1,81 +1,22 @@
-.container{
-  display: grid;
-  grid-template-columns: repeat(9, 1fr);
-  grid-template-rows: 50% 1fr;
-}
-.frame-background{
-  background-color: #629454;
-  width: 100vw;
-  height: 80px;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  grid-column-start: 2;
-  grid-column-end: 11;
-}
-.logomarca{
-  background-color: #E4F0E1;
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 1;
-  grid-row-end: 3;
-  height: 130px;
-  padding: 30px;
-  margin-left: -125px;
-  margin-top: -10px;
-}
-.person{
-  display: none;
-}
-.login{
-  font-size: 14px;
-  border-radius: 10px;
-  font-family: 'Josefin Slab';
-  border: none;
-  background-color: #727971;
-  color: #F0ECEC;
-  letter-spacing: 10px;
-  height: 40px;
-  width: 180px;
-  opacity: 80%;
-  display: block;
-  margin-top: 3vh;
-  margin-left: 60vw;
-}
-@media (min-width: 250px) and (max-width:750px){
+@media (min-width: 750px){
+  .container{
+    display: flex;
+    flex-direction: row;
+    align-items: top;
+    justify-content: left;
+  }
   .frame-background{
     background-color: #629454;
-    width: 100vw;
-    height: 100px;
+    width: 100%;
+    height: 15vh;
+    display: flex;
+    align-items: center;
+    justify-content: right;
   }
   .logomarca{
-    background-color : #E4F0E1;
-    height: 15vh;
-    transform: translate(25vw, -5%);
-  }
-  .login{
-    display: none;
-  }
-  .person{
-    display: block;
-    transform: translateY(30%) translateX(50vw);
-    background-color: transparent;
-    border: none;
-    color: rgb(238, 238, 238);
-    font-size: 15vw;
-    height: 15vh;
-    width: 15vw;
-  }
-}
-@media (min-width: 750px) and (max-width:1050px){
-  .frame-background{
-    background-color: #629454;
-    width: 100vw;
-    height: 100px;
-  }
-  .logomarca{
-    background-color : #E4F0E1;
-    height: 12vh;
-    transform: translate(10vw, -5%);
+    background-color: #E4F0E1;
+    height: 7rem;
+    padding: 1em;
   }
   .person{
     display: none;
@@ -91,8 +32,62 @@
     height: 40px;
     width: 180px;
     opacity: 80%;
-    display: block;
-    margin-top: 3vh;
-    margin-left: 55vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    margin-right: 5vw;
+  }
+  .login:hover{
+    opacity: 1.2;
+    animation: change 2s ease-in-out infinite;
+  }
+  @keyframes change {
+    0%{
+      transform: rotate(2deg);
+    }
+    50%{
+      transform: rotate(-4deg);
+    }
+    100%{
+      transform: rotate(2deg);
+    }
+  }
+}
+@media (min-width: 250px) and (max-width:750px){
+  .container{
+    display: flex;
+    flex-direction: row;
+    align-items: top;
+    justify-content: left;
+  }
+  .login{
+    display: none;
+  }
+  .person{
+    display: flex;
+    background-color: transparent;
+    border: none;
+    color: rgb(238, 238, 238);
+    font-size: 8vw;
+    height: 10vh;
+    width: 10vw;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    margin-right: 5vw;
+  }
+  .logomarca{
+    background-color: #E4F0E1;
+    height: 4rem;
+    padding: 1em;
+  }
+  .frame-background{
+    background-color: #629454;
+    width: 100%;
+    height: 8vh;
+    display: flex;
+    align-items: center;
+    justify-content: end;
   }
 }
